--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,6 +202,7 @@ ul li, ol li {
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
   display: inline-block;
+  text-align: center;
 }
 
 .btn i {
@@ -219,6 +220,14 @@ ul li, ol li {
   background-color: #FFCB05;
   position: relative;
   z-index: 1;
+}
+
+.btn-ctf {
+  margin-left: 75px;
+}
+
+.btn-title {
+  margin-left: 40px;
 }
 
 .btn-common:hover {
