--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -861,6 +861,12 @@ a.back-to-top:hover, a.back-to-top:focus {
   }
 }
 
+.footer-sts {
+  font-size: 20px;
+  text-align: center;
+  margin: auto;
+}
+
 .about-item {
   padding: 10px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.17);
@@ -2140,7 +2146,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 #main-slide .carousel-item .carousel-caption .heading {
-  font-size: 48px;
+  font-size: 64px;
   font-weight: 700;
   color: #fff;
   text-transform: uppercase;
